# MakeSharp

./: .gitignore  CMakeLists.txt  INCLUDES.md  README.md  logo.txt
play/: 2.cpp  data1.json  hello.json
src/: main.cpp
src/generator/: generator.hpp
src/include/: errno.h  exception.h
src/macros/: INIParser.h
src/parser/: CMakeLists.txt  loader.h  metadata.cpp  metadata.h  parser.h  profile.h  source.h
src/processor/: processor.hpp
src/utils/: platform.h  platform.hpp  utilstuff.h  visitPath.h
src/utils/platform/: language.hpp  system.hpp
standard/: file-format.json  file-format.md  format-zh.md  format.json  format.md  macros-zh.md  macros.md  main.md
test/: profile.cpp
